// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a form group with text input 1`] = `
<Fragment>
  <div
    className="form__group"
  >
    <FormLabel
      className="control__label"
      idGuid="id-guid-1"
      required={false}
    >
      Basic
    </FormLabel>
    <div
      className="controls"
    >
      <TextInput
        ariaDescribedby={null}
        className="form__control"
        idGuid="id-guid-1"
        placeholder="foo"
        type="text"
      />
      <ErrorBlock
        errorGuid="error-guid-1"
      />
      <HelpBlock
        helpGuid="help-guid-1"
      />
    </div>
  </div>
</Fragment>
`;

exports[`renders the basic input 1`] = `
<input
  className="form__control"
  type="text"
/>
`;

exports[`renders the basic input with id 1`] = `
<input
  className="form__control"
  id="foo"
  type="text"
/>
`;

exports[`renders the basic input with placeholder 1`] = `
<input
  className="form__control"
  placeholder="foo"
  type="text"
/>
`;

exports[`renders the basic input with required 1`] = `
<input
  className="form__control"
  required={true}
  type="text"
/>
`;
